--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       color: #333;
     }
     header {
-      background: #1f2937;
+      background: #CC0033;
       color: white;
       padding: 2rem;
       text-align: center;
