--- a/index.html
+++ b/index.html
@@ -3,13 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>User’s Guide · Self-Driven Lab</title>
-
-  <!-- ===== BASE STYLES ===== -->
+  <title>Self-Driven Lab · Landing Page</title>
   <style>
     :root {
-      --accent: #cc0033;          /* header + borders */
-      --primary: #3b82f6;         /* buttons */
+      --accent: #cc0033;
+      --primary: #3b82f6;
       --primary-dark: #2563eb;
       --bg: #f9f9f9;
       --card-bg: #ffffff;
@@ -17,7 +15,6 @@
       --radius: 10px;
       --shadow: 0 4px 16px rgba(0, 0, 0, 0.05);
     }
-
     * { box-sizing: border-box; }
     body {
       margin: 0;
@@ -26,8 +23,6 @@
       color: var(--text);
       line-height: 1.6;
     }
-
-    /* ===== HEADER ===== */
     header {
       background: var(--accent);
       color: #fff;
@@ -35,11 +30,9 @@
       padding: 3rem 1rem 2.5rem;
     }
     header h1 { margin: 0 0 0.5rem; }
-
-    /* ===== LAYOUT ===== */
     .container {
       max-width: 1050px;
-      margin: -3rem auto 4rem;      /* pulls cards up into header curve */
+      margin: -3rem auto 4rem;
       padding: 0 1.25rem;
     }
     .cards-grid {
@@ -47,8 +40,6 @@
       grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
       gap: 1.5rem;
     }
-
-    /* ===== CARD ===== */
     .card {
       background: var(--card-bg);
       border-left: 5px solid var(--accent);
@@ -69,8 +60,6 @@
       font-size: 1.25rem;
     }
     .card p { margin: 0 0 1rem; }
-
-    /* ===== BUTTON ===== */
     .btn {
       display: inline-block;
       padding: 0.55rem 1.2rem;
@@ -83,34 +72,65 @@
       transition: background 0.15s ease;
     }
     .btn:hover { background: var(--primary-dark); }
-
-    /* ===== FOOTER ===== */
     footer {
       text-align: center;
       color: #666;
       padding: 2.5rem 1rem 3rem;
       font-size: 0.9rem;
     }
+    .section-title {
+      font-size: 1.4rem;
+      margin-bottom: 0.5rem;
+      color: var(--accent);
+    }
   </style>
 </head>
-
 <body>
   <!-- ===== HERO ===== -->
   <header>
-    <h1>User’s Guide to Your First Self-Driven Lab</h1>
-    <p>Hands-on Colab tutorials, Jupyter notebooks, SDL software, build guides &amp; schematics in one place.</p>
+    <h1>Welcome to Your Self-Driven Lab Repository</h1>
+    <p>Explore build guides, software, and hands-on tutorials for automated liquid handling and experiment optimization.</p>
   </header>
 
-  <!-- ===== MAIN CONTENT ===== -->
   <main class="container">
 
-    <!-- Hands-on Tutorial heading -->
+    <!-- ===== LIQUID HANDLERS ===== -->
     <section class="card" style="border:none; box-shadow:none; padding-bottom:0;">
-      <h2 style="margin-bottom:0;">🧪 Hands-on Tutorial</h2>
-      <p style="margin-top:0;">Work through practical examples using Google Colab or local notebooks.</p>
+      <h2 class="section-title">🧰 Liquid Handler Platforms</h2>
+      <p>Choose your platform to access build guides, software, and documentation.</p>
     </section>
+    <div class="cards-grid">
 
-    <!-- Tutorial Cards -->
+      <!-- AutoPipette Liquid Handler -->
+      <section class="card">
+        <h2>AutoPipette Liquid Handler</h2>
+        <p>Automated pipetting platform with SDL software and full build documentation.</p>
+        <div>
+          <a class="btn" href="AutoPipette%20Liquid%20Handler/AutoPipette%20Liquid%20Handler%20Building%20Guide.pdf" target="_blank">Build Guide (PDF)</a>
+          <a class="btn" href="AutoPipette%20Liquid%20Handler/AutoPipette%20Liquid%20Handler%20Parts%20List.xlsx" target="_blank">Parts List (Excel)</a>
+          <a class="btn" href="AutoPipette%20Liquid%20Handler/AutoPipette%20SDL%20Software/README.md" target="_blank">SDL Software Docs</a>
+          <a class="btn" href="AutoPipette%20Liquid%20Handler/AutoPipette%20SDL%20Software/main.py" target="_blank">Launch Software</a>
+        </div>
+      </section>
+
+      <!-- Pen Plotter Liquid Handler -->
+      <section class="card">
+        <h2>Pen Plotter Liquid Handler</h2>
+        <p>Original AxiDraw-based liquid handler with build guides and SOP.</p>
+        <div>
+          <a class="btn" href="Pen%20Plotter%20Liquid%20Handler/Pen%20Plotter%20LH%20Build%20Guide.pdf" target="_blank">Build Guide (PDF)</a>
+          <a class="btn" href="Pen%20Plotter%20Liquid%20Handler/Building%20Guide.pptx" target="_blank">Build Guide (PPTX)</a>
+          <a class="btn" href="Pen%20Plotter%20Liquid%20Handler/SDL_SOP.pdf" target="_blank">Software SOP</a>
+          <a class="btn" href="Pen%20Plotter%20Liquid%20Handler/SDL%20Software/main.py" target="_blank">Launch Software</a>
+        </div>
+      </section>
+    </div>
+
+    <!-- ===== HANDS-ON TUTORIALS ===== -->
+    <section class="card" style="border:none; box-shadow:none; margin-top:2.5rem; padding-bottom:0;">
+      <h2 class="section-title">🧪 Hands-on Tutorial</h2>
+      <p>Work through practical examples using local Jupyter notebooks.</p>
+    </section>
     <div class="cards-grid">
 
       <!-- Section 1 -->
@@ -118,8 +138,7 @@
         <h2>Section 1 · Data Exploration</h2>
         <p>Explore your dataset with interactive visualizations and summary statistics.</p>
         <div>
-          <a class="btn" href="https://colab.research.google.com/drive/your_colab_id_1" target="_blank">Open in Colab</a>
-          <a class="btn" href="https://github.com/yourusername/yourrepo/blob/main/notebooks/section1.ipynb" target="_blank">View Notebook</a>
+          <a class="btn" href="Hands-on%20Tutorial/Section%201%20AL%20Tutorial_8_5_25.ipynb" target="_blank">Open Notebook</a>
         </div>
       </section>
 
@@ -128,8 +147,7 @@
         <h2>Section 2 · Model Training</h2>
         <p>Train a model with customizable parameters and visual feedback.</p>
         <div>
-          <a class="btn" href="https://colab.research.google.com/drive/your_colab_id_2" target="_blank">Open in Colab</a>
-          <a class="btn" href="https://github.com/yourusername/yourrepo/blob/main/notebooks/section2.ipynb" target="_blank">View Notebook</a>
+          <a class="btn" href="Hands-on%20Tutorial/Section%202%20AL%20Tutorial_8_5_25.ipynb" target="_blank">Open Notebook</a>
         </div>
       </section>
 
@@ -138,27 +156,14 @@
         <h2>Section 3 · Evaluation &amp; Analysis</h2>
         <p>Assess model performance and visualize results to guide next steps.</p>
         <div>
-          <a class="btn" href="https://colab.research.google.com/drive/your_colab_id_3" target="_blank">Open in Colab</a>
-          <a class="btn" href="https://github.com/yourusername/yourrepo/blob/main/notebooks/section3.ipynb" target="_blank">View Notebook</a>
+          <a class="btn" href="Hands-on%20Tutorial/Section_3%20AL%20Tutorial_8_5_25.ipynb" target="_blank">Open Notebook</a>
         </div>
       </section>
-
-      <!-- SDL Program -->
-      <section class="card">
-        <h2>🚀 Launch SDL Program</h2>
-        <p>Run the full Software-Defined Lab workflow in your browser.</p>
-        <div>
-          <a class="btn" href="https://sdl-platform-link.com" target="_blank">Launch SDL</a>
-        </div>
-      </section>
-
     </div>
   </main>
 
-  <!-- ===== FOOTER ===== -->
   <footer>
     © 2025 Your Name / Lab · Powered by GitHub Pages
   </footer>
-
 </body>
 </html>
